Iniciando a criação do dashboard HOME

--- a/dashboard.html
+++ b/dashboard.html
@@ -4,8 +4,27 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
+    <link rel="stylesheet" href="css/dashboard-style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 </head>
 <body>
-    
+    <!--Menu Superior do Dashboard-->
+
+    <div id="container-1">
+    <div class="top-menu">
+        <p style="color: #F15635; font-family: 'inter-regular';"><i class="fa-solid fa-chart-line" style="margin-right: 10px; margin-left: 15px;"> </i> DASHBOARD</p>
+        <div style="display: flex; align-items: center;"><p style="color: aliceblue; font-family: 'inter-regular'; font-size: 12px;">Bem vindo Usuário;</p> <i style="color: aliceblue; font-size: 30px; margin-right: 15px; margin-left: 15px;" class="fa-solid fa-circle-user"></i></div>
+    </div>
+    </div>
+
+
+    <div id="container-2">
+        <div id="menu-esquerdo">
+
+        </div>
+    </div>
+
+
+
 </body>
 </html>
