--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
     <title>Login JS</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
-<body>
+<body class="login-body">
 
     <div id="main-login">
         <div id="area-login">
